# parenting-rag

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  verify_db.py
.github/workflows/: ci.yml
data/processed/: feeding_aap_2024_bright_futures_nutrition.txt  feeding_aap_2024_nutrition_supervision.txt  feeding_aap_2024_solid_foods.txt  illness_cdc_2024_cold_relief_children.txt  illness_cdc_2024_common_cold.txt  illness_cdc_2025_rsv_infant_prevention_glance.txt  illness_cdc_2025_rsv_prevention.txt  illness_healthychildren_2024_fever_guide.txt  illness_healthychildren_2024_rsv_guide.txt  milestones_cdc_2021_full_checklists.txt  milestones_cdc_2024_12month_checklist.txt  milestones_cdc_2024_milestone_moments.txt  milestones_cdc_2025_checklists_updated.txt  sleep_safety_healthychildren_2024_safe_sleep_guide.txt  vaccines_cdc_2025_immunization_schedule.txt  vaccines_cdc_2025_parent_schedule.txt
data/raw/pdfs/: manifest.json
data/raw/pubmed/breastfeeding_duration_outcomes/: 17764214.json  19538614.json  26172878.json  26644419.json  28644764.json  30274877.json  30513338.json  30690202.json  30832484.json  31079143.json  (+10 more)
eval/: golden_dataset.json
experiments/: chunking_ablation.csv  run_chunking_ablation.py
src/api/: main.py
src/api/routers/: query.py
src/clients/: supabase.py
src/ingestion/: chunker.py  embedding.py  models.py  pdf_extractor.py  pipeline.py
src/retrieval/: bm25_retriever.py
tests/integration/: test_query_endpoint.py
tests/unit/: test_bm25_retriever.py  test_chunker.py
(+80 files in other folders)
